# black-hole-raytracer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: progress.md
examples/: cinematic_render.py  flat_render.py  kerr_render.py  orbit_animation.py  schwarzschild_render.py  spin_animation.py  spin_comparison.py
src/camera/: camera.py
src/geodesic/: gpu_integrator.py  integrator.py
src/metrics/: kerr.py  schwarzschild.py
src/render/: animator.py  curved_renderer.py  gpu_renderer.py  renderer.py
src/scene/: accretion_disk.py  blackbody.py  kerr_accretion_disk.py  physical_disk.py  starfield.py
src/utils/: cuda_loader.py
tests/: conftest.py
tests/geodesic/: test_gpu_integrator.py  test_integrator.py
tests/metrics/: test_acceleration_batch.py  test_kerr.py  test_schwarzschild.py
tests/scene/: test_kerr_accretion_disk.py  test_physical_disk.py  test_starfield.py
